[gd_scene load_steps=2 format=3 uid="uid://btuww4lyujy22"]

[ext_resource type="Script" path="res://Scenes/UI/In game ui/action_menu.gd" id="1_6clrm"]

[node name="ActionMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6clrm")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 80.0
offset_top = -20.0
offset_right = 120.0
offset_bottom = 20.0
grow_vertical = 2

[node name="AttackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../WaitButton")
focus_neighbor_bottom = NodePath("../SkillsButton")
text = "Attack"

[node name="SkillsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../AttackButton")
focus_neighbor_bottom = NodePath("../WaitButton")
text = "Skills"

[node name="WaitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../SkillsButton")
focus_neighbor_bottom = NodePath("../AttackButton")
text = "Wait"

[connection signal="pressed" from="VBoxContainer/AttackButton" to="." method="_on_attack_button_pressed"]
[connection signal="pressed" from="VBoxContainer/SkillsButton" to="." method="_on_skills_button_pressed"]
[connection signal="pressed" from="VBoxContainer/WaitButton" to="." method="_on_wait_button_pressed"]
